--- a/JavaScript/algorhitm/programmers/1.programmer_average.html
+++ b/JavaScript/algorhitm/programmers/1.programmer_average.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>프로젝트 오일러 문제 1번</title>
+    <title>프로그래머스 문제 1번</title>
 </head>
 
 <body>
