알고리즘 문제풀기

--- a/JavaScript/algorhitm/codeFight/codeFight_centuryFromYear.html
+++ b/JavaScript/algorhitm/codeFight/codeFight_centuryFromYear.html
@@ -48,6 +48,37 @@
             return century; // 결과 출력
         }
         centuryFromYear(1905); //  20
+
+        /*
+        문제를 풀면서 알게된 지식
+
+        자바스크립트에서 자연수의 올림과 버림, 반올림
+
+        버림 : 자연수 / 10을 한 몫을 구하면 1의 자리 수가 절삭되는 알고리즘을 이용하여 [자연수 / 10 * 10]을 해서 버림 계산을 할 수 있다.
+
+        ex) 125 / 10 = 12
+            12 * 10 = 120
+
+        반올림 : 5보다 큰 수에 5를 더하면 다음 차수가 1이 커지고, 5보다 작은 수에 5를 더하면 다음 차수는 변하지 않는 것을 이용합니다.
+
+        ex) 123 + 5 = 128
+            128 / 10 = 12
+            12 * 10 = 120
+
+            128 + 5 = 133
+            133 / 10 = 13
+            13 * 10 = 130
+
+        올림 : 1~9를 다음 차수의 1을 더해주는 것이므로 정수에 9를 더한 뒤 버림을 하면 해결할 수 있습니다.
+
+        ex) 131 + 9 = 140
+            140 / 10 = 14
+            14 * 10 = 140
+
+            220 + 9 = 229
+            229 / 10 = 22
+            22 * 10 = 220    
+        */
     </script>
 </body>
 
