--- a/JavaScript/algorithm/programmers/programmer_124_world.html
+++ b/JavaScript/algorithm/programmers/programmer_124_world.html
@@ -86,6 +86,13 @@
         // 10진법에 친숙해서 조금 어렵게 느껴졌던 것 같다.
         // 일단 삽질이라 생각해도 나열해보고 공통점을 찾는 것도..
         // 알고리즘적으로 접근이 어려우면 도움이 되는 것 같다...
+
+
+
+        // 진짜 이사람 짱인 것 같다..
+        function solution(n) {
+            return n === 0 ? '' : solution(parseInt((n - 1) / 3)) + [1, 2, 4][(n - 1) % 3];
+        }
     </script>
 </body>
 
