--- a/JavaScript/algorithm/programmers/programmer_privacy_period.html
+++ b/JavaScript/algorithm/programmers/programmer_privacy_period.html
@@ -119,7 +119,8 @@
         return answer;
       }
 
-      // 코딩테스트 안풀어보다가 오랜만에 풀어보니, 
+      // 코딩테스트 안풀어보다가 오랜만에 풀어보니,
+      // 머리가 잘 안돌아가고 어색하긴 하지만
       // 이런 구현성 문제들은 크게 어렵지 않은 것 같다.
       // new Date를 잘 이해하고, object를 활용할수 있는가 정도의 문제..
       // 물론 효율성이 빡세게 들어가면 다르겠지만..!
